@@ -1,25 +1,14 @@
 package com.esgi.pa.api.mappers;
 
+import java.util.List;
+
 import com.esgi.pa.api.dtos.responses.intern.GetInternResponse;
 import com.esgi.pa.domain.entities.Intern;
-import com.esgi.pa.domain.entities.Users;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Contient les méthodes pour mapper les entités utilisateur du domain vers des dtos
  */
 public interface InternMapper {
-  static GetInternResponse toGetInternResponse(Users users, Intern intern) {
-    return new GetInternResponse(
-      users.getId(),
-      users.getName(),
-      users.getEmail(),
-      users.getRole(),
-      intern.getFonction()
-    );
-  }
-
   static GetInternResponse toGetInternResponse(Intern intern) {
     return new GetInternResponse(
       intern.getUsers().getId(),
@@ -30,24 +19,11 @@ public interface InternMapper {
     );
   }
 
-  public static List<GetInternResponse> toGetInternResponse(
-    List<Users> entities,
-    List<Intern> interns
-  ) {
+  static List<GetInternResponse> toGetInternResponse(List<Intern> entities) {
     return entities
       .stream()
-      .map(entity ->
-        toGetInternResponse(entity, getInternByUser(entity, interns))
-      )
+      .map(InternMapper::toGetInternResponse)
       .distinct()
-      .collect(Collectors.toList());
-  }
-
-  private static Intern getInternByUser(Users users, List<Intern> interns) {
-    return interns
-      .stream()
-      .filter(intern -> intern.getUsers().equals(users))
-      .findFirst()
-      .orElse(null);
+      .toList();
   }
 }
